--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,9 @@
   <!-- Icons -->
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Round" rel="stylesheet">
+
+  <!-- Autocomplete Places -->
+  <script src='https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyBOmdqASwwGxnxF2V-30nV98G1f32042Ng'></script>
 </head>
 <body class="mat-typography">
   <app-root></app-root>
